--- a/_posts/0000-01-02-sp-icy.md
+++ b/_posts/0000-01-02-sp-icy.md
@@ -2,5 +2,8 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hello World!
+## Hello World!
+
+- This is another line.
+
 Use the left arrow to go back!
